--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="header">
+      <div class="header__title">
+        <%= link_to "Diary", '#', class: "header__title--text" %>
+      </div>
+      <div class="header__right">
+        <%= link_to "記録する", '#', class: "header__right--btn" %>
+      </div>
+    </header>
+    <div class="contents">
+      <%= yield %>
+    </div>
   </body>
 </html>
