フロント実装、コントローラーnew追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,19 @@
     <title>Diary</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lovers+Quarrel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header class="header">
-      <div class="header__title">
-        <%= link_to "Diary", '#', class: "header__title--text" %>
-      </div>
-      <div class="header__right">
-        <%= link_to "記録する", '#', class: "header__right--btn" %>
+      <div class="header-title">
+        <%= link_to "Diary", '#', class: "header-title__text" %>
+        <%= link_to "記録する", new_post_path, class: "header-title__post" %>
       </div>
     </header>
     <div class="contents">
