--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,19 @@
 <% @posts.each do |post| %>
   <div class="content">
-    <div class="content__left">
-      <div class="content__left--image"></div>
-    </div>
-    <div class="content__right">
-      <div class="content__right__top">
-        <%= post.title %>
-      </div>
-      <div class="content__right__bottom">
-        <div class="content__right__bottom--date">
+    <div class = "content-sentence">
+      <div class= "content-center">
+        <div class= "content-center-top">
+          <%= post.title %>
+        </div>
+        <div class= "content-center-bottom">
           <%= post.created_at %>
         </div>
+      </div>
+    </div>
+    <div class="content-side">
+      <div class="content-left">
+      </div>
+      <div class="content-right">
       </div>
     </div>
   </div>
