新規投稿ページのフロント実装

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -65,3 +65,11 @@
 a{
   text-decoration: none;
 }
+
+.content-center-new{
+  position: absolute;
+  margin-left: 600px;
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 20px;
+}
