--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <div class="header-title">
-        <%= link_to "Diary", '#', class: "header-title__text" %>
+        <%= link_to "Diary", root_path, class: "header-title__text" %>
         <%= link_to "記録する", new_post_path, class: "header-title__post" %>
       </div>
     </header>
