--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,10 @@
     <header class="header">
       <div class="header-title">
         <%= link_to "Diary", root_path, class: "header-title__text" %>
-        <%= link_to "記録する", new_post_path, class: "header-title__post" %>
       </div>
+      <div class ="header-title__post-right">
+        <%= link_to "記録する", new_post_path, class: "header-title__post" %>
+      <div>
     </header>
     <div class="contents">
       <%= yield %>
