--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,7 @@
           </div>
           <div class = "edit">
             <%= link_to "編集", edit_post_path(@post.id), class: "post-edit-btn"%>
+            <%= link_to "削除", post_path(@post.id), method: :delete, class: "post-delete-btn"%>
           </div>
           <div class= "post-sentence">
             <%= simple_format @post.content %>
